Finalize embedding pipeline portions

--- a/notebooks/pipeline/baseline_wikipedia2vec.ipynb
+++ b/notebooks/pipeline/baseline_wikipedia2vec.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Phase Two: Enter Full Mention into Wikipedia2vec get_entities() as Baseline\n",
+    "# Baseline: Enter Full Mention into Wikipedia2vec get_entities()\n",
     "\n",
-    "Our most direct step is to use Wikipedia2vec's API and its get_entities() function to enter `full_mention` directly into that. We do that as our first prediction step and baseline model, with the assumption that a returned result is near a 100% chance of being the correct page. We test this hypothesis at the end of this notebook. Our aim is to set a baseline as \"just use the available package\" before showing that adding customized work can improve accuracy."
+    "Our most direct step is to use Wikipedia2vec's API and its get_entities() function to enter `full_mention` directly into that. We do that as our first prediction step and baseline model, with the assumption that a returned result is near a 100% chance of being the correct page. We test this hypothesis at the end of this notebook. Our aim is to set a baseline of \"just use the available package\" before showing that adding customized work can improve accuracy."
    ]
   },
   {
@@ -184,8 +184,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 101 ms, sys: 158 ms, total: 259 ms\n",
-      "Wall time: 376 ms\n"
+      "CPU times: user 94.6 ms, sys: 123 ms, total: 218 ms\n",
+      "Wall time: 277 ms\n"
      ]
     }
    ],
@@ -211,14 +211,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13781/13781 [00:00<00:00, 29078.13it/s]"
+      "100%|██████████| 21810/21810 [00:00<00:00, 115368.08it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query Success Rate:  58.377 %\n"
+      "Query Success Rate:  60.298 %\n"
      ]
     },
     {
@@ -270,23 +270,21 @@
     {
      "data": {
       "text/plain": [
-       "array(['M. Dowman', 'Czech', 'Ilkka Laasonen', 'SHEFFIELD SHIELD',\n",
-       "       'Impala Platinum Holdings Ltd', 'Franziska Schenk', 'Bernd Zobel',\n",
-       "       'Indians', 'British', 'Toyo Trust & Banking Co', 'ENGLISH',\n",
-       "       'Provisional Election Commission', 'Okazaki Tomomi',\n",
-       "       'Schroder Wertheim & Co', 'Eduardo Aninat',\n",
-       "       'International Aviation Safety program', 'Egyptian', 'Russian',\n",
-       "       'Berri', 'LAGOS', 'Securities and Exchnage Commission', 'Maakinen',\n",
-       "       'Stallone', 'The Walt Disney Co', 'Ruutel', 'Eduardo Aninat',\n",
-       "       'Communications and Transportation Ministry', 'Chilean',\n",
-       "       'Slovenian', 'Iraq-U.N.', 'Campese', 'Russian', 'Israeli',\n",
-       "       'Jeff Wilson', 'PSA', 'Atletico', 'Penn Treaty American Corp',\n",
-       "       '1,000 LAKES RALLY', 'Merrion Insurance Company Inc',\n",
-       "       'New York Power Desk', 'OM', 'Stallone', 'Nyva Vinnytsya',\n",
-       "       'Wimbledon', 'Sofia Newsroom', 'Martinez', 'Martinez',\n",
-       "       'Brussels Newsroom',\n",
-       "       'Southern New England Telecommunciations Corp', 'Lebanese'],\n",
-       "      dtype='<U45')"
+       "array(['B. Yeltsin', 'Chicago Purchasing Managers', 'Waterville',\n",
+       "       'Chadler Thompson', 'CDU / CSU', 'Iraqi', 'NASS', 'Pietro T.',\n",
+       "       'Turkish', 'Polish Development Bank', 'Greens', 'Mexican',\n",
+       "       'Olympic', 'Steve Barnes', 'Cup winners Cup', 'Nabil Abu Rdainah',\n",
+       "       'CHRISTIE', 'Lawrence Sheets', 'ALKHAN-YURT',\n",
+       "       'Hwa Kay Thai Holdings Ltd', 'Aguas Zarcas de San Carlos',\n",
+       "       'Jean van Boxmeer', 'Orioles', 'In Home Health', 'Book of Mass',\n",
+       "       'Jose Hernandez', 'BONN', 'Chemlon Humenne',\n",
+       "       'EVEREN Securities Inc', 'Klongprem', 'Lebed',\n",
+       "       'Marion County Board of Education', 'Kurdish', 'New York',\n",
+       "       'Addameer Prisoners Support Association', 'National Farmers Union',\n",
+       "       'Michael DiVenuto', 'Lahd', 'J. Gillespie', 'Newmarket',\n",
+       "       'Penn Treaty', 'Bou Haroun', 'DHA',\n",
+       "       'Marion County Board of Education', 'I. Austin', 'James Hoey',\n",
+       "       'Grand Slam', 'Kurdish', 'Rick Huisman', 'Israeli'], dtype='<U55')"
       ]
      },
      "execution_count": 7,
@@ -303,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just plugging in the full mention to Wikipedia2vec receives a 58.4% query success rate, meaning the package is able to return any result at all. Most of the failed queries seem like reasonable, non-special text strings. Since Wikipedia2vec essentially matches on title searching, this reasonably suggests that assuming a full mention is a page title is an unlikely method to achieve great results and that some intermediate step must occur to link natural language to a Wikipedia page title."
+    "Just plugging in the full mention to Wikipedia2vec receives a 60.298% query success rate, meaning the package is able to return any result at all. Most of the failed queries seem like reasonable, non-special text strings. Since Wikipedia2vec essentially matches on title searching, this reasonably suggests that assuming a full mention is a page title is an unlikely method to achieve great results and that some intermediate step must occur to link natural language to a Wikipedia page title."
    ]
   },
   {
@@ -538,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -546,13 +544,13 @@
      "output_type": "stream",
      "text": [
       "****************************\n",
-      "All-Inclusive Predictive Accuracy: 38.372%\n",
+      "All-Inclusive Predictive Accuracy: 39.578%\n",
       "Note: All Full Mentions, whether they have a known true value or not.\n",
       "****************************\n",
-      "Filter Empty Mentions Mention Predictive Accuracy: 54.042%\n",
+      "Filter Empty Mentions Predictive Accuracy: 54.228%\n",
       "Note: Only Full Mentions with a known true value\n",
       "****************************\n",
-      "Filter Empty Results Predictive Accuracy: 75.135%\n",
+      "Filter Empty Known Trues & Results Predictive Accuracy: 73.809%\n",
       "Note: Only full mentions with a known true value that returned a result from Wikipedia2vec\n"
      ]
     }
@@ -567,15 +565,15 @@
     "print(\"****************************\")\n",
     "filtered_df = w2v_predictions[w2v_predictions['wikipedia_page_ID'].notnull()]\n",
     "mention_accuracy = (filtered_df['preds_w2v'] == filtered_df['wikipedia_title']).sum()\n",
-    "print(f\"Filter Empty Mentions Mention Predictive Accuracy: {round(mention_accuracy / len(filtered_df) * 100, 3)}%\")\n",
+    "print(f\"Filter Empty Mentions Predictive Accuracy: {round(mention_accuracy / len(filtered_df) * 100, 3)}%\")\n",
     "print(\"Note: Only Full Mentions with a known true value\")\n",
     "\n",
     "\n",
     "print(\"****************************\")\n",
-    "filtered_df = w2v_predictions[w2v_predictions['wikipedia_page_ID'].notnull()\\\n",
-    "                                   & w2v_predictions['preds_w2v'].notnull()]\n",
+    "filtered_df = w2v_predictions[(w2v_predictions['wikipedia_page_ID'].notnull())\\\n",
+    "                                   & (w2v_predictions['preds_w2v'].notnull())]\n",
     "result_accuracy = (filtered_df['preds_w2v'] == filtered_df['wikipedia_title']).sum()\n",
-    "print(f\"Filter Empty Results Predictive Accuracy: {round(result_accuracy / len(filtered_df) * 100, 3)}%\")\n",
+    "print(f\"Filter Empty Known Trues & Results Predictive Accuracy: {round(result_accuracy / len(filtered_df) * 100, 3)}%\")\n",
     "print(\"Note: Only full mentions with a known true value that returned a result from Wikipedia2vec\")"
    ]
   },
@@ -583,19 +581,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have chosen to standardize our comparisons across model types on full mentions with known true values. This model achieves an accuracy score of 54.042% for known true values. This comes on a base of 58% query success, suggesting that a very high proportion of successful queries are accurate (54% / 58% = 93% prediction accuracy for successful queries), but that performance cannot be improved without improving linking to Wikipedia pages."
+    "We have chosen to standardize our comparisons across model types on full mentions with known true values. This model achieves an accuracy score of 54.228% with known true values. This comes on a base of ~60% query success, suggesting that a very high proportion of successful queries are accurate (54% / 60% = 90% prediction accuracy for successful queries), but that performance cannot be improved without improving linking to Wikipedia pages."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9785/9785 [00:00<00:00, 57497.67it/s]"
+      "100%|██████████| 15918/15918 [00:00<00:00, 122137.15it/s]\n"
      ]
     },
     {
@@ -603,23 +601,16 @@
      "output_type": "stream",
      "text": [
       "****************************\n",
-      "Wikipedia2vec failed to return 139 searches, 1.421%\n",
+      "Wikipedia2vec failed to return 276 searches, 1.734%\n",
       "****************************\n",
-      "All-Inclusive Predictive Accuracy: 92.918%\n",
+      "All-Inclusive Predictive Accuracy: 91.67%\n",
       "****************************\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
    "source": [
     "# Confirm effectiveness of Wikipedia2vec's get_entity() on known true answers (non-null)\n",
-    "# Basically, if we plug in the literal Wikipedia URL, will it return the right result\n",
+    "# Basically, if we plug in the literal Wikipedia URL, will it return the right result?\n",
     "none_count = 0\n",
     "answers = []\n",
     "wikipedia_title = w2v_predictions[w2v_predictions['wikipedia_title'].notnull()]['wikipedia_title']\n",
@@ -643,7 +634,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We perform a second check of Wikipedia2Vec's effectiveness by querying all the known true response values, which represent known Wikipedia page titles. Wikipedia2vec returns 98.579%. The package is clearly effective are returning title searches; this is just not what is needed for our problem."
+    "We perform a second check of Wikipedia2Vec's effectiveness by querying all the known true response values, which represent known Wikipedia page titles. Wikipedia2vec returns 98.579% with high accuracy for known true values. The package is clearly effective at returning title searches; this is just not enough for our problem."
    ]
   },
   {
@@ -655,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +739,7 @@
        "2  ['EU', 'German', 'British']            None  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,21 +751,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save dataframe\n",
     "preds_path = '../../predictions/'\n",
-    "w2v_predictions.to_csv(os.path.join(preds_path, \"wikipedia2vec_getentities.csv\"), index=False)"
+    "w2v_predictions.to_csv(os.path.join(preds_path, \"w2v_getentities.csv\"), index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
