--- a/notebooks/pipeline/baseline_wikipedia2vec.ipynb
+++ b/notebooks/pipeline/baseline_wikipedia2vec.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part Two: Enter Full Mention into Wikipedia2vec Get Entities as Baseline\n",
+    "# Baseline: Enter Full Mention into Wikipedia2vec get_entities()\n",
     "\n",
-    "Our most direct step is to use Wikipedia2vec's API and its get_entities() function to enter `full_mention` directly into that. We do that as our first process step, with the assumption that a returned result is near a 100% chance of being the correct page. We test this hypothesis at the end of this notebook."
+    "Our most direct step is to use Wikipedia2vec's API and its get_entities() function to enter `full_mention` directly into that. We do that as our first prediction step and baseline model, with the assumption that a returned result is near a 100% chance of being the correct page. We test this hypothesis at the end of this notebook. Our aim is to set a baseline of \"just use the available package\" before showing that adding customized work can improve accuracy."
    ]
   },
   {
@@ -153,14 +153,16 @@
    "outputs": [],
    "source": [
     "# Re-name for this predictive step\n",
-    "preds_w2v_getentities = acy_input"
+    "w2v_predictions = acy_input.copy()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import Wikipedia2Vec Model"
+    "## Import Wikipedia2Vec Model\n",
+    "\n",
+    "We use Wikipedia2Vec's 100D pre-trained embeddings for our search functionality. We experimented with higher dimension embeddings and find no improvement in accuracy."
    ]
   },
   {
@@ -182,8 +184,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 94.3 ms, sys: 180 ms, total: 274 ms\n",
-      "Wall time: 326 ms\n"
+      "CPU times: user 94.6 ms, sys: 123 ms, total: 218 ms\n",
+      "Wall time: 277 ms\n"
      ]
     }
    ],
@@ -209,14 +211,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 29312/29312 [00:00<00:00, 59098.81it/s]"
+      "100%|██████████| 21810/21810 [00:00<00:00, 115368.08it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query Success Rate:  60.852 %\n"
+      "Query Success Rate:  60.298 %\n"
      ]
     },
     {
@@ -268,34 +270,21 @@
     {
      "data": {
       "text/plain": [
-       "array(['Gencor', 'Francisco Cea', 'Aoki', '.Robbie McEwen',\n",
-       "       'Marion County Board of Education', 'Huracan-Corrientes',\n",
-       "       'Sergey Makarov', 'WESTERN DIVISION', 'PARIS', 'Spanish',\n",
-       "       'Michael Andersson', 'Chris Adams', 'Pietro T.',\n",
-       "       \"Saturday'sWorld Cup\", 'Alberto Costa', 'French', 'Grand Slam',\n",
-       "       'R. Fay', 'Zarak Jahan Khan', 'Footscray', 'ASIAN CUP',\n",
-       "       'Pauline Konga', 'CAMPESE', 'Ronaldo Gonzalez', 'St Helens',\n",
-       "       'New York', 'Orii Corp', 'Indonesian', 'Chelsea', 'Edna Fernandes',\n",
-       "       'KANSAS CITY', 'ENGLISH', 'Slight', 'Tom Watson', 'Li Feng',\n",
-       "       'WESTERN DIVISION', 'Simona de Logu', 'Grand Slam', 'R. Irani',\n",
-       "       'Japanese', 'UEFA Fair Play', 'DALGLISH', 'McGregor',\n",
-       "       'KANSAS CITY', 'New York', 'First Battle of the Newbury bypass',\n",
-       "       'Brian Homewood', 'Hatoyama', 'PARIS',\n",
-       "       'Security Dynamics Technologies Inc.', 'Duran', 'John Gorst',\n",
-       "       'Eric Bergoust', 'EUROPEAN CUP', 'State ( central ) Bank',\n",
-       "       'Terry Price', 'Herschelle Gibs', 'Japanese', 'Mohammad Akam',\n",
-       "       'A. Mullally', 'Italian', 'UEFA Fair Play', 'KANSAS CITY',\n",
-       "       'MONTREAL', 'Chamber of Economy', 'Brewpole BV', 'English',\n",
-       "       'Strike Hard', 'New York', 'Juppe', 'SIMEX Brent',\n",
-       "       'Zubair Jahan Khan', 'U.S. Postal', 'Dutch', 'Kalf, Voorhis & Co',\n",
-       "       'Marco Lietti', 'Russian-Chechen', 'MINNESOTA', 'Kocinski',\n",
-       "       'St Kilda', 'Julien Bonetat', 'SAN FRANCISCO', 'Dutch',\n",
-       "       'Uneximbank', 'NEW YORK', 'Security Dynamics Technologies Inc.',\n",
-       "       'NEW YORK', 'UEFA Fair Play', 'Brazilian Plastic Surgery Society',\n",
-       "       'Haitham Haddadin', 'Vebjoen Rodal', 'Reuter London Newsroom',\n",
-       "       'UEFA Fair Play', 'Britain', 'Eric Bergoust',\n",
-       "       \"European Cup Winners ' Cup\", 'Peter Teravainen', 'Britain',\n",
-       "       'Iraqi', 'SAN MATEO'], dtype='<U129')"
+       "array(['B. Yeltsin', 'Chicago Purchasing Managers', 'Waterville',\n",
+       "       'Chadler Thompson', 'CDU / CSU', 'Iraqi', 'NASS', 'Pietro T.',\n",
+       "       'Turkish', 'Polish Development Bank', 'Greens', 'Mexican',\n",
+       "       'Olympic', 'Steve Barnes', 'Cup winners Cup', 'Nabil Abu Rdainah',\n",
+       "       'CHRISTIE', 'Lawrence Sheets', 'ALKHAN-YURT',\n",
+       "       'Hwa Kay Thai Holdings Ltd', 'Aguas Zarcas de San Carlos',\n",
+       "       'Jean van Boxmeer', 'Orioles', 'In Home Health', 'Book of Mass',\n",
+       "       'Jose Hernandez', 'BONN', 'Chemlon Humenne',\n",
+       "       'EVEREN Securities Inc', 'Klongprem', 'Lebed',\n",
+       "       'Marion County Board of Education', 'Kurdish', 'New York',\n",
+       "       'Addameer Prisoners Support Association', 'National Farmers Union',\n",
+       "       'Michael DiVenuto', 'Lahd', 'J. Gillespie', 'Newmarket',\n",
+       "       'Penn Treaty', 'Bou Haroun', 'DHA',\n",
+       "       'Marion County Board of Education', 'I. Austin', 'James Hoey',\n",
+       "       'Grand Slam', 'Kurdish', 'Rick Huisman', 'Israeli'], dtype='<U55')"
       ]
      },
      "execution_count": 7,
@@ -305,7 +294,14 @@
    ],
    "source": [
     "# Display random selection of failures\n",
-    "np.random.choice(failed_searches, 100)"
+    "np.random.choice(failed_searches, 50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just plugging in the full mention to Wikipedia2vec receives a 60.298% query success rate, meaning the package is able to return any result at all. Most of the failed queries seem like reasonable, non-special text strings. Since Wikipedia2vec essentially matches on title searching, this reasonably suggests that assuming a full mention is a page title is an unlikely method to achieve great results and that some intermediate step must occur to link natural language to a Wikipedia page title."
    ]
   },
   {
@@ -342,7 +338,7 @@
        "      <th>sentence_id</th>\n",
        "      <th>doc_id</th>\n",
        "      <th>congruent_mentions</th>\n",
-       "      <th>preds_w2v_getentity</th>\n",
+       "      <th>preds_w2v</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -507,7 +503,7 @@
        "8              Germany            1       0   \n",
        "9       United Kingdom            1       0   \n",
        "\n",
-       "                                  congruent_mentions  preds_w2v_getentity  \n",
+       "                                  congruent_mentions            preds_w2v  \n",
        "0                        ['EU', 'German', 'British']       European Union  \n",
        "1                        ['EU', 'German', 'British']                 None  \n",
        "2                        ['EU', 'German', 'British']                 None  \n",
@@ -527,8 +523,8 @@
    ],
    "source": [
     "# Append predictions to table\n",
-    "preds_w2v_getentities['preds_w2v_getentity'] = preds_w2v_getentity\n",
-    "preds_w2v_getentities.head(10)"
+    "w2v_predictions['preds_w2v'] = preds_w2v_getentity\n",
+    "w2v_predictions.head(10)"
    ]
   },
   {
@@ -548,13 +544,13 @@
      "output_type": "stream",
      "text": [
       "****************************\n",
-      "All-Inclusive Predictive Accuracy: 42.218%\n",
+      "All-Inclusive Predictive Accuracy: 39.578%\n",
       "Note: All Full Mentions, whether they have a known true value or not.\n",
       "****************************\n",
-      "Filter Empty Mentions Mention Predictive Accuracy: 55.6%\n",
+      "Filter Empty Mentions Predictive Accuracy: 54.228%\n",
       "Note: Only Full Mentions with a known true value\n",
       "****************************\n",
-      "Filter Empty Results Predictive Accuracy: 76.545%\n",
+      "Filter Empty Known Trues & Results Predictive Accuracy: 73.809%\n",
       "Note: Only full mentions with a known true value that returned a result from Wikipedia2vec\n"
      ]
     }
@@ -562,23 +558,30 @@
    "source": [
     "# Calculate accuracy\n",
     "print(\"****************************\")\n",
-    "overall_accuracy = (preds_w2v_getentities['preds_w2v_getentity'] == preds_w2v_getentities['wikipedia_title']).sum()\n",
-    "print(f\"All-Inclusive Predictive Accuracy: {round(overall_accuracy / len(preds_w2v_getentities) * 100, 3)}%\")\n",
+    "overall_accuracy = (w2v_predictions['preds_w2v'] == w2v_predictions['wikipedia_title']).sum()\n",
+    "print(f\"All-Inclusive Predictive Accuracy: {round(overall_accuracy / len(w2v_predictions) * 100, 3)}%\")\n",
     "print(\"Note: All Full Mentions, whether they have a known true value or not.\")\n",
     "\n",
     "print(\"****************************\")\n",
-    "filtered_df = preds_w2v_getentities[preds_w2v_getentities['wikipedia_page_ID'].notnull()]\n",
-    "mention_accuracy = (filtered_df['preds_w2v_getentity'] == filtered_df['wikipedia_title']).sum()\n",
-    "print(f\"Filter Empty Mentions Mention Predictive Accuracy: {round(mention_accuracy / len(filtered_df) * 100, 3)}%\")\n",
+    "filtered_df = w2v_predictions[w2v_predictions['wikipedia_page_ID'].notnull()]\n",
+    "mention_accuracy = (filtered_df['preds_w2v'] == filtered_df['wikipedia_title']).sum()\n",
+    "print(f\"Filter Empty Mentions Predictive Accuracy: {round(mention_accuracy / len(filtered_df) * 100, 3)}%\")\n",
     "print(\"Note: Only Full Mentions with a known true value\")\n",
     "\n",
     "\n",
     "print(\"****************************\")\n",
-    "filtered_df = preds_w2v_getentities[preds_w2v_getentities['wikipedia_page_ID'].notnull()\\\n",
-    "                                   & preds_w2v_getentities['preds_w2v_getentity'].notnull()]\n",
-    "result_accuracy = (filtered_df['preds_w2v_getentity'] == filtered_df['wikipedia_title']).sum()\n",
-    "print(f\"Filter Empty Results Predictive Accuracy: {round(result_accuracy / len(filtered_df) * 100, 3)}%\")\n",
+    "filtered_df = w2v_predictions[(w2v_predictions['wikipedia_page_ID'].notnull())\\\n",
+    "                                   & (w2v_predictions['preds_w2v'].notnull())]\n",
+    "result_accuracy = (filtered_df['preds_w2v'] == filtered_df['wikipedia_title']).sum()\n",
+    "print(f\"Filter Empty Known Trues & Results Predictive Accuracy: {round(result_accuracy / len(filtered_df) * 100, 3)}%\")\n",
     "print(\"Note: Only full mentions with a known true value that returned a result from Wikipedia2vec\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have chosen to standardize our comparisons across model types on full mentions with known true values. This model achieves an accuracy score of 54.228% with known true values. This comes on a base of ~60% query success, suggesting that a very high proportion of successful queries are accurate (54% / 60% = 90% prediction accuracy for successful queries), but that performance cannot be improved without improving linking to Wikipedia pages."
    ]
   },
   {
@@ -587,41 +590,10 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1                               Germany\n",
-       "2                        United Kingdom\n",
-       "5                              Brussels\n",
-       "6                   European Commission\n",
-       "7                   European Commission\n",
-       "                      ...              \n",
-       "29307    England national football team\n",
-       "29308               1966 FIFA World Cup\n",
-       "29309               1966 FIFA World Cup\n",
-       "29310               1966 FIFA World Cup\n",
-       "29311                    Bobby Charlton\n",
-       "Name: wikipedia_title, Length: 22257, dtype: object"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "preds_w2v_getentities[preds_w2v_getentities['wikipedia_title'].notnull()]['wikipedia_title']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 22257/22257 [00:00<00:00, 127382.29it/s]"
+      "100%|██████████| 15918/15918 [00:00<00:00, 122137.15it/s]\n"
      ]
     },
     {
@@ -629,26 +601,19 @@
      "output_type": "stream",
      "text": [
       "****************************\n",
-      "Wikipedia2vec failed to return 594 searches, 2.669%\n",
+      "Wikipedia2vec failed to return 276 searches, 1.734%\n",
       "****************************\n",
-      "All-Inclusive Predictive Accuracy: 91.374%\n",
+      "All-Inclusive Predictive Accuracy: 91.67%\n",
       "****************************\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
    "source": [
     "# Confirm effectiveness of Wikipedia2vec's get_entity() on known true answers (non-null)\n",
-    "# Basically, if we plug in the literal Wikipedia URL, will it return the right result\n",
+    "# Basically, if we plug in the literal Wikipedia URL, will it return the right result?\n",
     "none_count = 0\n",
     "answers = []\n",
-    "wikipedia_title = preds_w2v_getentities[preds_w2v_getentities['wikipedia_title'].notnull()]['wikipedia_title']\n",
+    "wikipedia_title = w2v_predictions[w2v_predictions['wikipedia_title'].notnull()]['wikipedia_title']\n",
     "for r in tqdm(wikipedia_title):\n",
     "    answer = w2v.get_entity(r)\n",
     "    if answer is None:\n",
@@ -669,12 +634,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We perform a second check of Wikipedia2Vec's effectiveness by querying all the known true response values, which represent known Wikipedia page titles. Wikipedia2vec returns 98.579% with high accuracy for known true values. The package is clearly effective at returning title searches; this is just not enough for our problem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Save predictive dataframe for input to next step"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +678,7 @@
        "      <th>sentence_id</th>\n",
        "      <th>doc_id</th>\n",
        "      <th>congruent_mentions</th>\n",
-       "      <th>preds_w2v_getentity</th>\n",
+       "      <th>preds_w2v</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -761,39 +733,32 @@
        "1            11867.0         Germany            0       0   \n",
        "2            31717.0  United Kingdom            0       0   \n",
        "\n",
-       "            congruent_mentions preds_w2v_getentity  \n",
-       "0  ['EU', 'German', 'British']      European Union  \n",
-       "1  ['EU', 'German', 'British']                None  \n",
-       "2  ['EU', 'German', 'British']                None  "
+       "            congruent_mentions       preds_w2v  \n",
+       "0  ['EU', 'German', 'British']  European Union  \n",
+       "1  ['EU', 'German', 'British']            None  \n",
+       "2  ['EU', 'German', 'British']            None  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# See final output\n",
-    "preds_w2v_getentities.head(3)"
+    "w2v_predictions.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save dataframe\n",
     "preds_path = '../../predictions/'\n",
-    "preds_w2v_getentities.to_csv(os.path.join(preds_path, \"wikipedia2vec_getentities.csv\"), index=False)"
+    "w2v_predictions.to_csv(os.path.join(preds_path, \"w2v_getentities.csv\"), index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
